testsuite/tests/indexed-types/should_fail/SimpleFail1b.stderr

SimpleFail1b.hs:4:1: error:
    • Number of parameters must match family declaration; expected 2
    • In the data instance declaration for ‘T1’
